fix: incorrectly applied z-index to modal

--- a/src/components/ColorPicker/index.scss
+++ b/src/components/ColorPicker/index.scss
@@ -11,7 +11,6 @@
 .color {
   &__input-container {
     position: relative;
-    z-index: var($z-page-content);
 
     display: flex;
   }
@@ -26,7 +25,7 @@
     left: 0;
 
     margin-top: base(0.5);
-    z-index: var($z-modal);
+    z-index: $z-modal;
   }
 }
 
